--- a/index.html
+++ b/index.html
@@ -2032,13 +2032,13 @@
                     <!-- Top Section: Grid Based (2022) -->
                     <div class="pouch-top-grid">
                         <div class="pouch-span-2" onclick="openLightbox('Image/Pouch/pouch_1.webp', '복드림주머니, 한지에 동양안료, 73x91cm, 2024-2022')">
-                            <img src="Image/Pouch/Pouch_1.webp" alt="복드림주머니">
+                            <img src="Image/Pouch/pouch_1.webp" alt="복드림주머니">
                         </div>
                         <div class="pouch-span-1" onclick="openLightbox('Image/Pouch/pouch_2.webp', '복드림주머니, 한지에 동양안료, 21x28cm, 2022')">
-                            <img src="Image/Pouch/Pouch_2.webp" alt="복드림주머니">
+                            <img src="Image/Pouch/pouch_2.webp" alt="복드림주머니">
                         </div>
                         <div class="pouch-span-1" onclick="openLightbox('Image/Pouch/pouch_3.webp', '복드림주머니, 한지에 동양안료, 21x28cm, 2022')">
-                            <img src="Image/Pouch/Pouch_3.webp" alt="복드림주머니">
+                            <img src="Image/Pouch/pouch_3.webp" alt="복드림주머니">
                         </div>
                     </div>
 
