--- a/index.html
+++ b/index.html
@@ -2031,27 +2031,27 @@
                 <div class="artwork-item wide show" data-category="hope" data-year="2022-2020" data-subcategory="lucky-pouch">
                     <!-- Top Section: Grid Based (2022) -->
                     <div class="pouch-top-grid">
-                        <div class="pouch-span-2" onclick="openLightbox('Image/Pouch/pouch_1.webp', '복드림주머니, 한지에 동양안료, 73x91cm, 2024-2022')">
-                            <img src="Image/Pouch/pouch_1.webp" alt="복드림주머니">
+                        <div class="pouch-span-2" onclick="openLightbox('Image/pouch/pouch_1.webp', '복드림주머니, 한지에 동양안료, 73x91cm, 2024-2022')">
+                            <img src="Image/pouch/pouch_1.webp" alt="복드림주머니">
                         </div>
-                        <div class="pouch-span-1" onclick="openLightbox('Image/Pouch/pouch_2.webp', '복드림주머니, 한지에 동양안료, 21x28cm, 2022')">
-                            <img src="Image/Pouch/pouch_2.webp" alt="복드림주머니">
+                        <div class="pouch-span-1" onclick="openLightbox('Image/pouch/pouch_2.webp', '복드림주머니, 한지에 동양안료, 21x28cm, 2022')">
+                            <img src="Image/pouch/pouch_2.webp" alt="복드림주머니">
                         </div>
-                        <div class="pouch-span-1" onclick="openLightbox('Image/Pouch/pouch_3.webp', '복드림주머니, 한지에 동양안료, 21x28cm, 2022')">
-                            <img src="Image/Pouch/pouch_3.webp" alt="복드림주머니">
+                        <div class="pouch-span-1" onclick="openLightbox('Image/pouch/pouch_3.webp', '복드림주머니, 한지에 동양안료, 21x28cm, 2022')">
+                            <img src="Image/pouch/pouch_3.webp" alt="복드림주머니">
                         </div>
                     </div>
 
                     <!-- Bottom Grid Section (2022/2021 + Pouch 10/11 Moved) -->
                     <div class="pouch-grid-full">
-                        <div class="nested-item" onclick="openLightbox('Image/Pouch/Pouch_4.webp', '충만, 한지에 동양안료, 27x27cm, 2022')"><img src="Image/Pouch/pouch_4.webp" alt="충만"></div>
-                        <div class="nested-item" onclick="openLightbox('Image/Pouch/Pouch_5.webp', 'Dragon Magic, 한지에 동양안료, 27x27cm, 2022')"><img src="Image/Pouch/pouch_5.webp" alt="Dragon Magic"></div>
-                        <div class="nested-item" onclick="openLightbox('Image/Pouch/Pouch_6.webp', '온기, 한지에 동양안료, 27x27cm, 2022')"><img src="Image/Pouch/pouch_6.webp" alt="온기"></div>
-                        <div class="nested-item" onclick="openLightbox('Image/Pouch/Pouch_7.webp', '부의 꽃, 한지에 동양안료, 27x27cm, 2022')"><img src="Image/Pouch/pouch_7.webp" alt="부의 꽃"></div>
-                        <div class="nested-item" onclick="openLightbox('Image/Pouch/Pouch_8.webp', 'Diamond is Power, 한지에 동양안료, 27x27cm, 2022')"><img src="Image/Pouch/pouch_8.webp" alt="Diamond"></div>
-                        <div class="nested-item" onclick="openLightbox('Image/Pouch/Pouch_9.webp', 'Out of Limits, 한지에 동양안료, 27x27cm, 2022')"><img src="Image/Pouch/pouch_9.webp" alt="Out of Limits"></div>
-                        <div class="nested-item" onclick="openLightbox('Image/Pouch/Pouch_10.webp', 'The Quest, 한지에 동양안료, 27x27cm, 2022')"><img src="Image/Pouch/pouch_10.webp" alt="The Quest"></div>
-                        <div class="nested-item" onclick="openLightbox('Image/Pouch/Pouch_11.webp', 'The Quest, 한지에 동양안료, 45x43cm, 2022')"><img src="Image/Pouch/pouch_11.webp" alt="The Quest"></div>
+                        <div class="nested-item" onclick="openLightbox('Image/pouch/pouch_4.webp', '충만, 한지에 동양안료, 27x27cm, 2022')"><img src="Image/pouch/pouch_4.webp" alt="충만"></div>
+                        <div class="nested-item" onclick="openLightbox('Image/pouch/pouch_5.webp', 'Dragon Magic, 한지에 동양안료, 27x27cm, 2022')"><img src="Image/pouch/pouch_5.webp" alt="Dragon Magic"></div>
+                        <div class="nested-item" onclick="openLightbox('Image/pouch/pouch_6.webp', '온기, 한지에 동양안료, 27x27cm, 2022')"><img src="Image/pouch/pouch_6.webp" alt="온기"></div>
+                        <div class="nested-item" onclick="openLightbox('Image/pouch/pouch_7.webp', '부의 꽃, 한지에 동양안료, 27x27cm, 2022')"><img src="Image/pouch/pouch_7.webp" alt="부의 꽃"></div>
+                        <div class="nested-item" onclick="openLightbox('Image/pouch/pouch_8.webp', 'Diamond is Power, 한지에 동양안료, 27x27cm, 2022')"><img src="Image/pouch/pouch_8.webp" alt="Diamond"></div>
+                        <div class="nested-item" onclick="openLightbox('Image/pouch/pouch_9.webp', 'Out of Limits, 한지에 동양안료, 27x27cm, 2022')"><img src="Image/pouch/pouch_9.webp" alt="Out of Limits"></div>
+                        <div class="nested-item" onclick="openLightbox('Image/pouch/pouch_10.webp', 'The Quest, 한지에 동양안료, 27x27cm, 2022')"><img src="Image/pouch/pouch_10.webp" alt="The Quest"></div>
+                        <div class="nested-item" onclick="openLightbox('Image/pouch/pouch_11.webp', 'The Quest, 한지에 동양안료, 45x43cm, 2022')"><img src="Image/pouch/pouch_11.webp" alt="The Quest"></div>
                     </div>
                 </div>
 
